--- a/style.css
+++ b/style.css
@@ -373,6 +373,7 @@ color:var(--color-gray)
 
  .profiles{
     display: flex;
+    justify-content: center;
     flex-wrap: wrap;
     gap:36px;
     padding-bottom: 149px;
